tests/errors/optional_default.ml
let with_default ?(x = 1) y =
  x + y
